Add membership info to support us

--- a/MILESTONE 2/support_us.html
+++ b/MILESTONE 2/support_us.html
@@ -55,7 +55,7 @@
 			<h2>Methods To Support Us</h2>
 				<div id="membership" class="support-option-div">
 					<h3>Become a Member</h3>
-					<p>Support the Orchestra by donating a set amount of money to become a member.</p>
+					<p>Support the Orchestra and provide input via our member meetings by donating a set amount of money to become a member.</p>
 					<h4>Membership Costs</h4>
 					<ul>
 						<li>Adult: $30</li>
