Fix links, add password to membership form

--- a/MILESTONE 2/history/2013.html
+++ b/MILESTONE 2/history/2013.html
@@ -160,10 +160,10 @@
 					<ul>
 						<li><a href="https://www.townsville.qld.gov.au/">Townsville City Council</a> continues as our principal sponsor, which covers our core operational costs</li>
 						<li>The Wheel Family Charitable Gift Fund</li>
-						<li><a href="">Sturt Business Centre</a></li>
-						<li><a href="">ASAP Printers</a></li>
-						<li><a href="">Signs of Excellence</a></li>
-						<li><a href="">Australian Concerto and Vocal Competetion</a></li>
+						<li><a href="http://www.sturtbc.com.au/">Sturt Business Centre</a></li>
+						<li><a href="https://www.truelocal.com.au/business/asap-printers/garbutt">ASAP Printers</a></li>
+						<li><a href="http://www.signsofexcellence.com.au/">Signs of Excellence</a></li>
+						<li><a href="http://acvc.com.au/">Australian Concerto and Vocal Competetion</a></li>
 					</ul>
 					<p>We would also like to welcome our new sponor <a href="https://www.wilmarsugarmills.com.au/">Wilmar Sugar</a></p>
 				</section>
@@ -171,7 +171,7 @@
 					<h3>FUNDRAISING</h3>
 					<p>A new fundraising approach in 2013 was our <a href="../support_us.html">Benefactors</a> appeal. This has had a good start with <a href="../committee_and_supporters.html">17 Benefactors</a> currently enrolled and the first renewals are about to commence. This particular avenue of fundraising will stregthen over time and prove to be a very reliable source of income provided it is proactively managed.</p>
 
-					<p>2013 saw our first encouragment awards. Two yong orchestra members - Craig Land and Lexie Gorton - each received a well deserved $500 award in recoginition of their enthusiastic participation in the orchestra. The <a href="../committee_and_supporters.html">committee</a>is continuing the encouragment awards into 2014. I would like to thank all the players who together produced such excellent performanced in 2013.</p>
+					<p>2013 saw our first encouragment awards. Two yong orchestra members - Craig Land and Lexie Gorton - each received a well deserved $500 award in recoginition of their enthusiastic participation in the orchestra. The <a href="../committee_and_supporters.html">committee</a> is continuing the encouragment awards into 2014. I would like to thank all the players who together produced such excellent performanced in 2013.</p>
 				</section>	<!-- End of Fundraising Section -->
 				<section id="farewell">
 					<h3>FAREWELL</h3>
