--- a/MILESTONE 2/index.html
+++ b/MILESTONE 2/index.html
@@ -6,7 +6,6 @@
 	
 	<link href="mainstyles.css" rel="stylesheet" type="text/css">
 	<link href="homestyles.css" rel="stylesheet" type="text/css">
-	<script src="mainscripts.js" type="text/javascript"></script>
 	
 	<!-- Carousel -->
 	<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
@@ -17,6 +16,7 @@
 	<!-- End of Carousel -->
 </head>
 <body>	
+	<script src="facebookSDK.js" type="text/javascript"></script>	
 	<header>
 		<img id="header-img" src="logos/barrier_reef_orchestra_logo.png" title="Barrier Reef Orchestra" alt="Barrier Reef Orchestra Logo" width="518" height="184">
 		<nav id="main-nav" class="nav">
@@ -115,13 +115,13 @@
 				<section id="home-sign-up">
 					<h2 class="secondary-main">Join The Community</h2>
 					<div class="home-form-buttons">
-						<a href="#"><img src="button_images/become_a_member_smaller.png" alt="Become A Member" width="411" height="180"></a>
+						<a href="forms/membership_form.html"><img src="button_images/become_a_member_smaller.png" alt="Become A Member" width="411" height="180"></a>
 					</div>
 					<div class="home-form-buttons">
-						<a href="#"><img src="button_images/become_a_benefactor_smaller.png" alt="Become A Benefactor" width="411" height="180"></a>
+						<a href="forms/benefactors_form.html"><img src="button_images/become_a_benefactor_smaller.png" alt="Become A Benefactor" width="411" height="180"></a>
 					</div>
 					<div class="home-form-buttons">
-						<a href="#"><img src="button_images/join_the_orchestra_smaller.png" alt="Apply to Join the Orchestra" width="411" height="180"></a>
+						<a href="forms/join_the_orchestra_form.html"><img src="button_images/join_the_orchestra_smaller.png" alt="Apply to Join the Orchestra" width="411" height="180"></a>
 					</div>
 				</section>	<!-- End of Member Buttons -->
 				<section id="home-featured-artist">
