Add bronwyn artist page

--- a/MILESTONE 2/announcements/notice_of_agm2015.html
+++ b/MILESTONE 2/announcements/notice_of_agm2015.html
@@ -45,7 +45,7 @@
 		<nav id="breadcrumb">
 			<ul>
 				<li><a href="../index.html">Home</a></li>
-				<li><a href="../about_us.html">Newsfeed</a></li>
+				<li><a href="../newsfeed.html">Newsfeed</a></li>
 				<li>Notice of AGM</li>
 			</ul>
 		</nav>
