--- a/MILESTONE 2/newsfeed.html
+++ b/MILESTONE 2/newsfeed.html
@@ -42,6 +42,12 @@
 				<li><a href="contact_us.html">Contact Us</a></li>
 			</ul>
 		</nav>
+		<nav id="breadcrumb">
+			<ul>
+				<li><a href="../index.html">Home</a></li>
+				<li>Newsfeed</li>
+			</ul>
+		</nav>
 	</header>
 	<div id="wrapper">	<!-- Container is used for pushing footer to the bottom -->
 		<div id="main-content">
