--- a/plan.html
+++ b/plan.html
@@ -18,7 +18,7 @@
 	<h1>Web Design &amp; Development - Milestone 1 - Project Plan (TEAM 31)</h1>
 
 	Group Members (Team 31) : Bradman Davis, Akintobi Akinbiyi, Simranjeet Sidhu<br>
-	Due Date: 5/05 5pm.	Extension Due Date: 12/05 5pm. (Granted by Dianna Hardy)
+	Due Date: 5/05 5pm.	Extension Due Date: 12/05 5pm. (Granted by Dianna Hardy).
 
 	<h2>Goals</h2>
 		<p>The goal of the website is to increase the number of attendees at Barrier Reef Orchestra concerts &amp; events by 25%.</p>
