Add richard mcintyre OAM artist page

--- a/MILESTONE 2/events.html
+++ b/MILESTONE 2/events.html
@@ -123,7 +123,7 @@
 					</div>
 					<div class="buttons">
 						<a href="events/world_of_music.html"><button type="button">Learn More</button></a>
-						<a href="gallery/#last_night_at_the_proms"><button type="button" class="bottombutton">View Event Gallery</button></a>
+						<a href="gallery/last_night_at_the_proms.html"><button type="button" class="bottombutton">View Event Gallery</button></a>
 					</div>	<!-- End of Buttons -->
 				</div> 	<!-- End of Event -->
 				<div class="event">
