--- a/Report.html
+++ b/Report.html
@@ -9,7 +9,7 @@ Report
 <h1>Web Design &amp; Development - Report (TEAM 31)</h1>
 
 
-<Group Members (Team 31) : Bradman Davis, Akintobi Akinbiyi, Simranjeet Sidhu <br>
+Group Members (Team 31) : Bradman Davis, Akintobi Akinbiyi, Simranjeet Sidhu <br>
 
 
 <!--
