--- a/Report.html
+++ b/Report.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Report</title>
+<title>Web Design &amp; Development - Report (TEAM 31)</title>
 </head>
-Report
 <body>
 <h1>Web Design &amp; Development - Report (TEAM 31)</h1>
 
@@ -18,6 +17,7 @@ Project Links:
 Site Home Page-->
 <h2>GitHub Repository</h2>
 <a href="https://github.com/BradmanLD/Assignment2---CP1806---Group-Website">https://github.com/BradmanLD/Assignment2---CP1806---Group-Website</a>
+
 <h2>Slack group</h2> 
 <a href="https://itatjcu.slack.com/messages/G0ZRJEHLZ">https://itatjcu.slack.com/messages/G0ZRJEHLZ</a>
 
@@ -40,7 +40,9 @@ references (links) for any code, images or content that you have used that are n
 -->
 <h2>PMI</h2>
 
-<p> As a team, the group brainstormed ideas which allows us as a group to focus on where and how to improve each situation the assignment would be faced with. After much consideration, the team was a able to come up with innovative ideas to develop the website, Thus allowing the group to create a website based on the information provided which reflects our intended target audience. </p>
+<p> As a team, the group brainstormed ideas which allows us as a group to focus on where and how to improve each situation the assignment would be faced with. After much consideration, the team was able to come up with innovative ideas to develop the website, Thus allowing the group to create a website based on the information provided which reflects our intended target audience. </p>
+
+The team comprises of three people from different backgrounds. Each member demostrates ability to work independently in various areas as well as working as a team. The ability to brainstorm ideas, work with others towards a shared goals and demostrate flexibility to achieve common goal. An effective teamwork and a vibrant team culture is a vital component in the successful completion of the assignment. 
 
 <!--your group should spend some time reflecting on the process and describe here the Pluses, Minuses and Interesting aspects of your teamwork process and result
 
