--- a/Report.html
+++ b/Report.html
@@ -1,55 +1,70 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Web Design &amp; Development - Report (TEAM 31)</title>
+<!DOCTYPE html>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<title>Team 31 - Group Project Report</title>
 </head>
+
 <body>
-<h1>Web Design &amp; Development - Report (TEAM 31)</h1>
 
 
-Group Members (Team 31) : Bradman Davis, Akintobi Akinbiyi, Simranjeet Sidhu <br>
+
+    <title>Report for Group Number Team 31 on Slack</title>
+    
+    <style type="text/css">
+        body {
+            font-family: Arial, sans-serif;
+            margin-left: 3em;
+        }
+
+        h1, h2 {
+            margin-left: -1em;
+        }
+
+        h2 {
+            margin-top: 1.5em;
+            margin-bottom: 0.5em;
+        }
+    </style>
 
 
-<!--
-Project Links:
 
-Site Home Page-->
-<h2>GitHub Repository</h2>
-<a href="https://github.com/BradmanLD/Assignment2---CP1806---Group-Website">https://github.com/BradmanLD/Assignment2---CP1806---Group-Website</a>
-
-<h2>Slack group</h2> 
-<a href="https://itatjcu.slack.com/messages/G0ZRJEHLZ">https://itatjcu.slack.com/messages/G0ZRJEHLZ</a>
-
-<!-- This code makes a paragraph Please list GitHub usernames with your own names if the usernames are not clearly identifiable.
-Completed Work by Who
-
-brief details of who did what
-
-    XXX: ...
-    YYY: ...
-
-Testing Details
-
-any details required to test the site, including instructions if needed, outstanding issues (like things that look as though they work but don't)
-References
-
-references (links) for any code, images or content that you have used that are not your own
-
-    ...
--->
+<h1>CP1406/1806/5638 - 2017 Group Project Report</h1>
+<h2>Group Number Team 31 on Slack</h2>
+<p><strong>Members:</strong> Bradman Davis, Akintobi Akinbiyi, Simranjeet Sidhu</p>
+<h2>Project Links</h2>
+<ul>
+    <li><a href="http:/?">Site Home Page</a></li>
+    <li><a href="http://github.com/BradmanLD/Assignment2---CP1806---Group-Website" target="_blank">GitHub repository</a></li>
+    <li><a href="https://itatjcu.slack.com/archives/https://itatjcu.slack.com/messages/G0ZRJEHLZ" target="_blank">Slack group</a> (right-click on your Slack group
+        name and choose "Copy Link" to get this URL)
+    </li>
+</ul>
+<p>Bradman LD - Bradman Davis, Kentrea08 -  Akintobi Akinbiyi, SimranjeetSidhu - Simranjeet Sidhu</p>
+<h2>Completed Work by Who</h2>
+<p>brief details of who did what</p>
+<ul>
+    <li><strong>Bradman: </strong> Did the majority of the work (90%+) for designing and creating the website. Created all the pages, organized all the content, complated the comps and site plan. </li>
+    <li><strong>Akintobi: </strong> Helped with the design and creation of the website (10%). Despite not doing as much he made it clear early on that he would not have much time to contribute and attended every meeting arranged and participated.</li>
+    <li><strong>Simranjeet: </strong> Didn't help, the last time I had contact with him was 3 weeks ago when we arranged a meeting for the next day, which he didn't attend.</li>
+</ul>
+<h2>Testing Details</h2>
+<p> *Tobi I'll fill this out tomorrow after I've talked to Dianna. any details required to test the site, including instructions if needed, outstanding issues
+    (like things that look as though they work but don't)</p>
+<h2>References</h2>
+<p>references (links) for any code, images or content that you have used that are not your own</p>
+<ul>
+    <li><strong>The Sponsor Carosuel in the footer: </strong> <a href="https://www.solodev.com/blog/web-design/adding-an-infinite-client-logo-carousel-to-your-website.stml">Source of the Code for the CSS / JAVASCRIPT</a></li>
+    <li><strong>The facebook integration on the homepage: </strong> <a href="https://github.com/lindsaymarkward/JavaScriptExamples">Came from Lindsay's JavaScript Examples</a></li>
+    <li><strong>The galley slideshows were based on: </strong> <a href="https://www.w3schools.com/howto/howto_js_slideshow.asp">A w3school how to</a></li>
+</ul>
 <h2>PMI</h2>
+<p>your group should spend some time reflecting on the process and describe here the Pluses, Minuses and Interesting
+    aspects of your teamwork process and result</p>
+<p><strong>Pluses: </strong> The way the team came together early on and decided on the preferred communication methods for each member. Additionally it was great how quickly Tobi (Akintobi) and I were able to organize meetings, which either of us didn't miss or were late to. - BradmanLD</p>
+<p><strong>Minuses: </strong> The fact that I was left alone to do the majority of the assessment as no one was contributing until the week each milestone was due at which point it was too late to change anything or reorganize the work for multiple people to contribute. There were also meetings early on were neither team memeber came prepared to discuss the assessment and quickly derailed the conversation leaving me to work on the assessment. - BradmanLD </p>
+<p><strong>Interesting: </strong> The way Tobi (Akintobi) and I were able to communicate effectively over slack and text messages to ensure that while he didn't do as much work he certainly had a noticeable contribution. - BradmanLD</p>
 
-<p> As a team, the group brainstormed ideas which allows us as a group to focus on where and how to improve each situation the assignment would be faced with. After much consideration, the team was able to come up with innovative ideas to develop the website, Thus allowing the group to create a website based on the information provided which reflects our intended target audience. </p>
 
-The team comprises of three people from different backgrounds. Each member demostrates ability to work independently in various areas as well as working as a team. The ability to brainstorm ideas, work with others towards a shared goals and demostrate flexibility to achieve common goal. An effective teamwork and a vibrant team culture is a vital component in the successful completion of the assignment. 
 
-<!--your group should spend some time reflecting on the process and describe here the Pluses, Minuses and Interesting aspects of your teamwork process and result
 
-Pluses: ...
-
-Minuses: ...
-
-Interesting: (including significant lessons) ...-->
-</body>
-</html>
+</body></html>
