--- a/Report.html
+++ b/Report.html
@@ -35,7 +35,7 @@
 <ul>
     <li><a href="http:/?">Site Home Page</a></li>
     <li><a href="http://github.com/BradmanLD/Assignment2---CP1806---Group-Website" target="_blank">GitHub repository</a></li>
-    <li><a href="https://itatjcu.slack.com/archives/https://itatjcu.slack.com/messages/G0ZRJEHLZ" target="_blank">Slack group</a> (right-click on your Slack group
+    <li><a href="https://itatjcu.slack.com/archives/G0ZRJEHLZ" target="_blank">Slack group</a> (right-click on your Slack group
         name and choose "Copy Link" to get this URL)
     </li>
 </ul>
