--- a/Report.html
+++ b/Report.html
@@ -45,7 +45,7 @@
 <ul>
     <li><strong>Bradman: </strong> Did the majority of the work (90%+) for designing and creating the website. Created all the pages, organized all the content, complated the comps and site plan. </li>
     <li><strong>Akintobi: </strong> Helped with the design and creation of the website (10%). Despite not doing as much he made it clear early on that he would not have much time to contribute and attended every meeting arranged and participated.</li>
-    <li><strong>Simranjeet: </strong> Didn't help, the last time I had contact with him was 3 weeks ago when we arranged a meeting for the next day, which he didn't attend.</li>
+    <li><strong>Simranjeet: </strong> Little help, but not the noticeble contribution.</li>
 </ul>
 <h2>Testing Details</h2>
 <p> *Tobi I'll fill this out tomorrow after I've talked to Dianna. any details required to test the site, including instructions if needed, outstanding issues
