--- a/MILESTONE 2/artists/richard_mcintyre.html
+++ b/MILESTONE 2/artists/richard_mcintyre.html
@@ -60,28 +60,24 @@
 				</section>	<!-- End of Image Section -->
 				<article id="about-the-artist">
 					<section>
-						<h4>About Richard McIntyre OAM</h4>
+						<h4 class="article-head">About Richard McIntyre OAM</h4>
 						<p>Richard McIntyre OAM, has maintained a long and distinguished career as a bassoonist, music educator, conductor and arranger. He developed these skills as he spent over 25 years working with the ANU School of Music ans is now of Australi'a most respected musical teachers, who places emphasis on developing strong one on one relationships with his students.</p>
 						<p>His work as a conductor is well-known, particually in Canberra. He was Conudctor and Musical Director of the Canberra Youth Orchestra from 1980 - 1990, creating a reputation that led to them touring across Europe. His Canberra contributon has included development of and much work with the School of Music Orchestra, Canberra Opera, Canberra Philharmonic Society, thirteen years as Musical Director of The Llewellyn Choir, and three years as Musical Director of the Oriana Chorale.</p>
 						<p>He has won several awards throughout his career including 1986 Canberran of the Year, Advance Australia, Sound Australian, and National Critics' Circle awards. In 1992 he was granted an Order of Australia Medal, for services to Music and Music Education, particually for his work with the Canberra Youth Orchestra.</p>
 						<p>His numerous conducting activities outside of Canberra include the foundation, development, and work with the <a href="../index.html">Barrier Reef Orchestra</a>, with which he still continues his association as Artistic Advisor and frequent conductor.</p>	
 					</section>
 					<section id="performances">
-						<h4>Bronwyn's Barrier Reef Orchestra Performances</h4>
+						<h4 class="article-head">Bronwyn's Barrier Reef Orchestra Performances</h4>
 						<div class="event even">
 							<div class="title-location-date">
 								<h3 class="title">Last Night at the Proms</h3>
 								<h4 class="location">Townsville Civic Theatre</h4>
 								<h4 class="date">Was 1st November, 2014</h4>
 							</div>
-							<div class="conductor">
-								<h4>Conductor</h4>
-								<a href="artists/richard_mcintyre.html"><img src="artist_images/events/richard_mcintyre_small.png" alt="Conductor Image Not Available" title="name" width="100" height="100"></a>
-								<p><a href="artists/richard_mcintyre.html">Richard McIntyre</a></p>
-							</div>
 							<div class="artists">
 								<h4>Special Guests</h4>
 								<ul>
+									<li><a href="richard_mcintyre.html">Richard McIntyre OAM</a></li>
 									<li><a href="http://nqomt.com.au/">The Company Singers - North Queensland Opera and Music Theatre Company </a></li>
 								</ul>
 							</div>
