Add raymond yong

--- a/MILESTONE 2/artists/raymond_yong.html
+++ b/MILESTONE 2/artists/raymond_yong.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Richard McIntyre - Barrier Reef Orchestra</title>
+	<title>Raymond Yong - Barrier Reef Orchestra</title>
 	<link href="../mainstyles.css" rel="stylesheet" type="text/css">
 	<link href="../artiststyles.css" rel="stylesheet" type="text/css">
 	
@@ -46,7 +46,7 @@
 			<ul>
 				<li><a href="../index.html">Home</a></li>
 				<li><a href="../artists.html">Our Team - Artists</a></li>
-				<li>Richard McIntyre</li>
+				<li>Raymond Yong</li>
 			</ul>
 		</nav>
 	</header>
@@ -54,36 +54,35 @@
 		<div id="main-content">
 			<section id="individual-artist">
 				<section id="image-name-role">
-					<h2>Richard McIntyre OAM</h2>
-					<img src="../artist_images/artist_overview/richard_mcintyre_large.jpg" width="280" height="225">
+					<h2>Raymond Yong</h2>
+					<img src="../artist_images/artist_overview/raymond_yong_large.jpg" width="280" height="225">
 					<h3>Conductor</h3>
 				</section>	<!-- End of Image Section -->
 				<article id="about-the-artist">
 					<section>
-						<h4 class="article-head">About Richard McIntyre OAM</h4>
-						<p>Richard McIntyre OAM, has maintained a long and distinguished career as a bassoonist, music educator, conductor and arranger. He developed these skills as he spent over 25 years working with the ANU School of Music ans is now of Australi'a most respected musical teachers, who places emphasis on developing strong one on one relationships with his students.</p>
-						<p>His work as a conductor is well-known, particually in Canberra. He was Conudctor and Musical Director of the Canberra Youth Orchestra from 1980 - 1990, creating a reputation that led to them touring across Europe. His Canberra contributon has included development of and much work with the School of Music Orchestra, Canberra Opera, Canberra Philharmonic Society, thirteen years as Musical Director of The Llewellyn Choir, and three years as Musical Director of the Oriana Chorale.</p>
-						<p>He has won several awards throughout his career including 1986 Canberran of the Year, Advance Australia, Sound Australian, and National Critics' Circle awards. In 1992 he was granted an Order of Australia Medal, for services to Music and Music Education, particually for his work with the Canberra Youth Orchestra.</p>
-						<p>His numerous conducting activities outside of Canberra include the foundation, development, and work with the <a href="../index.html">Barrier Reef Orchestra</a>, with which he still continues his association as Artistic Advisor and frequent conductor.</p>	
+						<h4 class="article-head">About Raymond Yong</h4>
+						<p>Raymond Yong was born in Malaysia, emigrating to Australia at the age of two. He received his inital musical training in Perth, performing regularly in public piano recitals from an early age. It was in High School that he first took to the podium as a conductor.</p>
+						<p>Raymond went on to study conducting at the University of Melbourne as a pupil of the late John Hopkins and received further training in the Symphony Australia Young Development Programme. He became the Music Director of the Victorian Youth Symphony Orchestra and was the Founding Director of Orchestra 21.</p>
+						<p>He has been a regular guest with the <a href="../index.html">Barrier Reef Orchestra</a> since 2011, conducting the orchestra, performing as a piano soloist, and providing workshops on conducting to student in Townsville.</p>	
 					</section>
 					<section id="performances">
-						<h4 class="article-head">Richard's Barrier Reef Orchestra Performances</h4>
+						<h4 class="article-head">Bronwyn's Barrier Reef Orchestra Performances</h4>
 						<div class="event even">
 							<div class="title-location-date">
-								<h3 class="title">Last Night of the Proms</h3>
+								<h3 class="title">Sounds of Romance</h3>
 								<h4 class="location">Townsville Civic Theatre</h4>
-								<h4 class="date">Was 1st November, 2014</h4>
+								<h4 class="date">Was 29th March, 2015</h4>
 							</div>
 							<div class="artists">
 								<h4>Special Guests</h4>
 								<ul>
-									<li><a href="richard_mcintyre.html">Richard McIntyre OAM</a></li>
-									<li><a href="http://nqomt.com.au/">The Company Singers - North Queensland Opera and Music Theatre Company </a></li>
+									<li>Jennifer Bradstreet</li>
+									<li>Leah Li</li>
 								</ul>
 							</div>
 							<div class="buttons">
-								<a href="../events/last_night_of_the_proms.html"><button type="button">Learn More</button></a>
-								<a href="../gallery/last_night_at_the_proms.html"><button type="button" class="bottombutton">View Event Gallery</button></a>
+								<a href="../events/sounds_of_romance.html"><button type="button">Learn More</button></a>
+								<a href="#"><button type="button" class="bottombutton">Event Has No Gallery</button></a>
 							</div>	<!-- End of Buttons -->
 						</div> 	<!-- End of Event -->
 					</section>	<!-- End of Performances -->				
