--- a/MILESTONE 2/events.html
+++ b/MILESTONE 2/events.html
@@ -130,7 +130,7 @@
 				    <div class="title-location-date">
 					   	<h3 class="title">Masterworks</h3>
 					   	<h4 class="location">Townsville Civic Theatre</h4>
-					   	<h4 class="date">5th September, 8pm.</h4>
+					   	<h4 class="date">Was 6th September, 2014</h4>
 					</div>
 					<div class="conductor">
 						<h4>Conductor</h4>
